Converted the comment plugin code from javascript to typescript.

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "no-mixed-spaces-and-tabs": "error",
     "no-trailing-spaces": "error",
     "no-undef": "error",
+    "no-console": "on" ,
     "no-unused-expression": [
       true,
       "allow-fast-null-checks"
@@ -33,7 +34,8 @@
       {
         "vars": "all",
         "args": "none",
-        "ignoreRestSiblings": false
+        "ignoreRestSiblings": false,
+        "argsIgnorePattern": "^_"
       }
     ],
     "no-var": "error",
