--- a/.babelrc
+++ b/.babelrc
@@ -9,13 +9,13 @@
       }
     ],
     "@babel/preset-react",
-    "@babel/preset-flow"
+    "@babel/preset-typescript"
   ],
-  "plugins": [    
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
-    "flow-react-proptypes",
     "transform-react-remove-prop-types",
-    "@babel/plugin-transform-flow-strip-types",
+    "@babel/plugin-transform-typescript",
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-parameters",
     [
@@ -35,7 +35,6 @@
         "legacy": true
       }
     ],
-	["@babel/plugin-proposal-class-properties",{"loose":true}],
     "@babel/plugin-proposal-function-sent",
     "@babel/plugin-proposal-export-namespace-from",
     "@babel/plugin-proposal-numeric-separator",
