--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "description": "Comment plugin built with React and ProseMirror",
   "main": "dist/index.js",
   "style": "dist/styles.css",
-  "bundleDependencies": [
-    "prosemirror-utils"
-  ],
   "scripts": {
     "test": "jest --coverage",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-comment-*.*.*.tgz",
@@ -75,7 +72,7 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "@modusoperandi/licit-ui-commands": "git+https://github.com/MO-Movia/licit-ui-components.git",
+    "@modusoperandi/licit-ui-commands": "^0.1.5",
     "@pubsweet/ui-toolkit": "^2.3.17",
     "@remirror/core-utils": "^1.1.3",
     "@types/react-dom": "^17.0.11",
@@ -101,7 +98,7 @@
     "prosemirror-model": "^1.13.0",
     "prosemirror-state": "^1.3.4",
     "prosemirror-transform": "^1.2.9",
-    "prosemirror-utils": "file:prosemirror-utils-1.0.0-0.tgz",
+    "prosemirror-utils": "^1.0.0-0",
     "prosemirror-view": "^1.17.3",
     "query-string": "6.13.1",
     "react": "^17.0.2",
