--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-comment",
-  "version": "0.0.2-1",
+  "version": "0.0.2",
   "subversion": "1",
   "description": "Comment plugin built with React and ProseMirror",
   "main": "dist/index.js",
