--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "@modusoperandi/licit-comment",
-  "version": "0.0.2-0",
+  "version": "0.0.13",
   "subversion": "1",
   "description": "Comment plugin built with React and ProseMirror",
   "main": "dist/index.js",
   "style": "dist/styles.css",
-  "bundleDependencies": [
-    "prosemirror-utils"
-  ],
   "scripts": {
-    "test": "jest --coverage --passWithNoTests",
+    "test": "jest --passWithNoTests",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-comment-*.*.*.tgz",
     "build:ts": "tsc -p tsconfig.json",
     "webpack": "webpack",
     "build:babel": "babel src --out-dir dist --extensions .ts,.tsx",
     "build:dist": "npm run build:clean && npm run build:ts && npm run webpack && npm run build:babel && npm run build:css",
-    "build:css": "mkdirp ./dist/asset && cp src/*.css dist/ && cp asset/*.png dist/asset",
+    "build:css": "cp src/*.css dist/",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint:ts": "eslint src --ext .ts,.tsx --fix",
     "prepare": "npm run build:dist",
@@ -26,7 +23,7 @@
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-decorators": "^7.16.0",
+    "@babel/plugin-proposal-decorators": "^7.16.4",
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
     "@babel/plugin-proposal-export-default-from": "^7.16.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.16.0",
@@ -38,28 +35,30 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-parameters": "^7.16.3",
-    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/plugin-transform-typescript": "^7.16.1",
-    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.35",
+    "@types/node": "^18.8.1",
+    "@types/react": "^18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "babel-eslint": "^10.1.0",
+    "babel-eslint": "10.1.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.1.0",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
-    "eslint": "8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.2.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.27.0",
+    "enzyme": "^3.11.0",
+    "eslint": "7.8.1",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "7.20.3",
+    "file-loader": "^6.2.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
@@ -70,22 +69,21 @@
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.4.4",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
+    "webpack-cli": "^4.10.0",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "@modusoperandi/licit-ui-commands": "git+https://github.com/MO-Movia/licit-ui-components.git#renamed-to-licit-utils",
+    "@modusoperandi/licit-ui-commands": "^0.1.5",
     "@pubsweet/ui-toolkit": "^2.3.17",
     "@remirror/core-utils": "^1.1.3",
     "@types/react-dom": "^17.0.11",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "browserkeymap": "2.0.2",
     "classnames": "2.3.1",
     "color": "3.1.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "exports-loader": "3.1.0",
     "invariant": "2.2.4",
     "inversify": "^6.0.1",
@@ -95,19 +93,19 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "prosemirror-commands": "1.1.12",
-    "prosemirror-dropcursor": "1.4.0",
-    "prosemirror-gapcursor": "1.2.0",
-    "prosemirror-history": "1.2.0",
+    "prosemirror-dropcursor": "^1.3.5",
+    "prosemirror-gapcursor": "1.1.5",
+    "prosemirror-history": "1.1.3",
     "prosemirror-inputrules": "1.1.3",
-    "prosemirror-keymap": "^1.1.5",
-    "prosemirror-model": "^1.15.0",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-model": "^1.13.0",
     "prosemirror-state": "^1.3.4",
-    "prosemirror-transform": "^1.3.3",
-    "prosemirror-utils": "file:prosemirror-utils-1.0.0-0.tgz",
-    "prosemirror-view": "^1.23.1",
-    "query-string": "7.0.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.13.1",
+    "prosemirror-transform": "^1.2.9",
+    "prosemirror-utils": "^1.0.0-0",
+    "prosemirror-view": "^1.17.3",
+    "query-string": "6.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-tooltip": "4.0.3",
     "react-transition-group": "^2.5.1",
     "resize-observer-polyfill": "1.5.1",
