--- a/package.json
+++ b/package.json
@@ -76,14 +76,10 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "@modusoperandi/licit-ui-commands": "^0.1.12",
+    "@modusoperandi/licit-ui-commands": "^0.1.13",
     "@pubsweet/ui-toolkit": "^2.3.17",
     "@remirror/core-utils": "^1.1.3",
-    "@types/react-dom": "^17.0.11",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-    "browserkeymap": "2.0.2",
-    "classnames": "2.3.1",
-    "color": "3.1.2",
     "exports-loader": "3.1.0",
     "invariant": "2.2.4",
     "inversify": "^6.0.1",
@@ -93,17 +89,13 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "query-string": "6.13.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-tooltip": "4.0.3",
     "react-transition-group": "^2.5.1",
     "resize-observer-polyfill": "1.5.1",
     "smooth-scroll-into-view-if-needed": "1.1.32",
     "stable": "0.1.8",
-    "style-loader": "^3.3.1",
     "styled-components": "^5.3.3",
-    "use-deep-compare-effect": "^1.8.1",
-    "uuid": "8.3.2"
+    "use-deep-compare-effect": "^1.8.1"
   },
   "lint-staged": {
     "*.css": [
