--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "dist/index.js",
   "style": "dist/styles.css",
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest",
+    "test:unit": "jest",
+    "test:coverage": "jest --coverage",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-comment-*.*.*.tgz",
     "build:ts": "tsc -p tsconfig.json",
     "webpack": "webpack",
@@ -15,6 +17,9 @@
     "build:css": "cp src/*.css dist/",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint:ts": "eslint src --ext .ts,.tsx --fix",
+    "lint": "npm run lint:css & npm run lint:ts",
+    "ci:build": "npm run build:clean && npm run build:ts && npm run webpack && npm run build:babel && npm run build:css",
+    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
     "prepare": "npm run build:dist",
     "debug": "node --debug-brk --inspect ./node_modules/.bin/jest -i"
   },
@@ -40,6 +45,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@cyclonedx/cyclonedx-npm": "^1.11.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^18.8.1",
     "@types/react": "^18.0.21",
