--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "jest-junit": "^15.0.0",
     "jest-prosemirror": "^1.0.10",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^12.1.2",
